kubernetes-networks/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-route
  namespace: homework

spec:
  # Привязка к Gateway
  parentRefs:
    - name: homework-gateway

  hostnames:
    - "homework.otus"

  rules:
    # Задание с *: rewrite — /homepage форвардится на /index.html.
    - matches:
        - path:
            type: PathPrefix
            value: /homepage
      filters:
        - type: URLRewrite   # Фильтр перезаписи URL.
          urlRewrite:
            path:
              type: ReplaceFullPath        # Полностью заменить путь на указанный ниже.
              replaceFullPath: /index.html
      backendRefs:           # Куда направить запрос
        - name: homework-web
          port: 80

    # Весь остальной HTTP-трафик к homework.otus идет на Service
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homework-web
          port: 80
